# Energy-and-Property-Tech-Inc

./: .env.example  .gitignore  EVALUATION_STORAGE_README.md  Energy-&-Property-Tech-Inc_Sample_Data.xlsx - Balance Sheet.csv  Energy-&-Property-Tech-Inc_Sample_Data.xlsx - Cash Flow.csv  Energy-&-Property-Tech-Inc_Sample_Data.xlsx - Income Statement.csv  Energy-&-Property-Tech-Inc_Sample_Data.xlsx - Installed Assets.csv  Energy-&-Property-Tech-Inc_Sample_Data.xlsx - Lead Funnel.csv  Energy-&-Property-Tech-Inc_Sample_Data.xlsx - Products.csv  README.md  REAL_TIME_EXECUTION_README.md  agent_monitor.py  ai_prompts.py  ai_service.py  claude_agents.py  comprehensive_emea_test.py  comprehensive_test.py  debug_gpt5_advanced.py  debug_gpt5_output.py  demo-plan.md  demo_launcher.py  emea_test_orchestration_20250813_074724.json  end_to_end_test.py  end_to_end_test_report_20250813_070502.json  evaluation_report_20250813_072249.md  fast_mcp_connectors.py  gpt5_evaluator_agent.py  gpt5_evaluator_integration.py  integration_tester.py  lang-graph-examples.md  langgraph_workflow.py  langgraph_workflow_v2.py  launch_demo.py  main_integration.py  main_integration_v2.py  model_test.py  o3_orchestrator.py  performance_dashboard.py  performance_optimizer.py  pyproject.toml  (+13 more)
Documentation/: 01-Project-Overview.md  02-System-Architecture.md  03-Agent-System.md  05-End-to-End-Examples.md  README.md  SUMMARY.md
Requirements/: Campaign-Planner-Agent-I-prd.md.txt  Financial-Impact-Agent-I-prd.md.txt  Operations-Summary-Agent-I-prd.md.txt  Project-PRD.md.txt  Upsell-Discovery-Agent-I-prd.md.txt
(+48 files in other folders)
