[project]
name = "energy-property-tech-ai"
version = "1.0.0"
description = "Energy & Property Tech Inc. Multi-Agent AI System"
authors = [
    {name = "Energy & Property Tech Inc.", email = "info@energypropertytech.com"}
]
dependencies = [
    "langgraph>=0.2.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "fastmcp>=2.11.1",
    "streamlit>=1.48.0",
    "plotly>=6.2.0",
    "psutil>=7.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [] 
